# ChatConsoleNetCpp

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  chatclient.cpp  chatclient.h  main.cpp  message.cpp  message.h  misc.cpp  misc.h  net.cpp  net.h  sha1.cpp  sha1.h  user.cpp  user.h
server/: CMakeLists.txt  chatserver.cpp  chatserver.h  db.h  db_Interface.h  db_myodbc.cpp  db_myodbc.h  db_mysql.cpp  db_mysql.h  main.cpp  message.h  misc.cpp  misc.h  netserver.cpp  netserver.h  user.cpp  user.h
